[package]
name = "web3nameservice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3nameservice"
path = "src/lib.rs"

[features]
default = ["Debug", "devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
Debug = []
devnet = []


[dependencies]
anchor-lang = "0.30.1"
borsh = "1.5.5"

